(executable
  (name wasm_interpreter)
  (libraries cmdliner)
  (modes (best exe)))

(install
  (package wasm_interpreter)
  (section bin)
  (files (wasm_interpreter.exe as wasm_interpreter)))

(coq.extraction
	(theories Wasm)
	(prelude extraction)
	(extracted_modules Extract))

(env (dev (flags (:standard -warn-error -A)))) ; The extracted OCaml code yields a lot of warnings.

